--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Travel Website</title>
-  </head>
-  <body></body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <script>
+        window.location.href = "./pages/home_page.html"; // Relative path
+    </script>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="./pages/home.html">click here</a>.</p>
+</body>
 </html>
